fixed spacing on mansonry layout

--- a/src/App.css
+++ b/src/App.css
@@ -43,14 +43,16 @@ h1, h2, h3, h4, h5 {
   flex: 1 100%;
 }
 
-.img-card{
+div.img-card{
   position: relative;
+  display: grid;
+
 }
 
 .img-look{
-  /*width: 300px;*/
-  height: 30vh;
-  padding: 5px;
+  width: 30vw;
+  margin: 0;
+  padding:0;
 }
 
 .img-icon{
@@ -61,13 +63,6 @@ top: 50%;
   left: 50%;
   opacity: 0;
 }
-
-div.masonryApi { 
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-
-} 
 
 div.masonryDB { 
   display: flex;
@@ -188,22 +183,31 @@ li.navLinks.nav-right {
 
 .filter-bar{
   display: block;
-  padding: 10px;
+/*  padding: 10px;*/
 }
 
-.looks-bar{
+.looks-page{
+  display: flex;
+  flex-direction: column;
+}
+
+.masonryApi { 
+
   background-color: #EC4068;
   background: -webkit-linear-gradient(top, #F45F55, #EC4068, #AE2E7A);
   background: -o-linear-gradient(top, #F45F55, #EC4068, #AE2E7A);
   background: linear-gradient(to bottom, #F45F55, #EC4068, #AE2E7A);
 
-  order: 3;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
 
-  align-items: center;
+  padding: 0px;
+  height: 400vh;
+  width: 120vw;
+  overflow-x: hidden !important;
 
-  padding: 10px;
-  margin-bottom: 50px;
-}
+} 
 
 .vanityBar{
   background-color: #EC4068;
@@ -215,16 +219,8 @@ li.navLinks.nav-right {
 
   align-items: center;
 
-  padding: 10px;
+/*  padding: 10px;*/
   margin-bottom: 50px;
-}
-
-.api-container{
-/*  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;*/
-
 }
 
 .look-card{
@@ -278,33 +274,6 @@ li.navLinks.nav-right {
 
 .link:hover {
   cursor:pointer;
-}
-
-.team-container{
-  display: flex; 
-  flex-direction: row; 
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-}
-
-.team-card{
-  padding: 5px;
-}
-
-.team-img{
-  width: 150px;
-}
-
-.about-content{
-  display: flex; 
-  flex-direction: content; 
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  padding: 5%;
-  background-color: rgba(255, 255, 255, 0.7);
-  margin-top: 65px;
 }
 
 .FilterBar {
